--- a/index.css
+++ b/index.css
@@ -102,7 +102,7 @@ textarea {
 .textoCifrado{
     font-size: 24px;
     color: rgba(73, 80, 87, 1);
-    height: 80%;
+    height: 75vh;
     opacity: 1;
     transition: opacity 0.5s ease; 
     display: none;
